--- a/app/public/home.html
+++ b/app/public/home.html
@@ -24,7 +24,7 @@
             <div>
                 <a href="/survey">
                     <button type="button" class="btn btn-lg btn-primary">
-                        <h4><span class="glyphicon glyphicon-list-alt"></span> Go to Survey</h4>
+                        <h4><span><i class="fas fa-list-alt"></i></span> Go to Survey</h4>
                     </button>
                 </a>
             </div>
