--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -153,8 +153,9 @@
     <br>
 
     <!-- Submit Button -->
-    <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit"><i class="fa fa-check-circle" aria-hidden="true"></i>
-     Submit</button>
+    <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit"><i class="fa fa-check-circle"
+        aria-hidden="true"></i>
+      Submit</button>
 
     <hr>
     <footer class="footer">
@@ -205,25 +206,24 @@
       }
     };
 
-    for (var selector in config) {
+    for (let selector in config) {
       $(selector).chosen(config[selector]);
     }
 
     // Capture the form inputs
-    $("#submit").on("click", function(event) {
+    $("#submit").on("click", function (event) {
       event.preventDefault();
 
       // Form validation
       function validateForm() {
-        var isValid = true;
-        $(".form-control").each(function() {
+        let isValid = true;
+        $(".form-control").each(function () {
           if ($(this).val() === "") {
             isValid = false;
           }
         });
 
-        $(".chosen-select").each(function() {
-
+        $(".chosen-select").each(function () {
           if ($(this).val() === "") {
             isValid = false;
           }
@@ -234,7 +234,7 @@
       // If all required fields are filled
       if (validateForm()) {
         // Create an object for the user"s data
-        var userData = {
+        let userData = {
           name: $("#name").val(),
           photo: $("#photo").val(),
           scores: [
@@ -252,7 +252,7 @@
         };
 
         // AJAX post the data to the friends API.
-        $.post("/api/friends", userData, function(data) {
+        $.post("/api/friends", userData, function (data) {
 
           // Grab the result from the AJAX post so that the best match's name and photo are displayed.
           $("#match-name").text(data.name);
